deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lincoln
  labels:
    app: lincoln
spec:
  revisionHistoryLimit : 1
  selector:
    matchLabels:
      app: lincoln
  template:
    metadata:
      name: lincoln
      labels:
        app: lincoln
    spec:
      containers:
      - name: lincoln
        image: horvatic/lincoln:1.3
        ports:
          - containerPort: 80
            name: "lincoln-http"
