deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lincoln
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: lincoln-http
  selector:
    app: lincoln
